...
    }
}

@Composable
private fun AlertSwitch(
    label: String,
    tag: String,
    checked: Boolean,
    enabled: Boolean,
    onChange: (Boolean) -> Unit
) {
    Row(
        Modifier.fillMaxWidth().sizeIn(minHeight = 48.dp),
...
