...
            R.string.alert_notification_settings,
            "event_alert_notifications_settings"
        ) {
            onSettings(AlertSettingsTarget.NOTIFICATIONS)
        }
        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.S) {
            PermissionButton(R.string.alert_exact_settings, "event_alert_exact_settings") {
                onSettings(AlertSettingsTarget.EXACT)
            }
        }
        Text(
            stringResource(R.string.alert_background_explanation),
            style = MaterialTheme.typography.bodySmall
...
